--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0.15.7"
+reqwest = { version = "0.11.20", features = ["json"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = "0.3.17"
