feat: added `mysql` as db and used `seaORM` to manage migrations

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 BOT_TOKEN=<TOKEN>
 RUST_LOG=fewwis=trace
 RAPID_API_KEY=<KEY>
+DATABASE_URL=protocol://username:password@host/
+DATABASE_NAME=database
