--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 [dependencies]
 dotenvy = "0.15.7"
 reqwest = { version = "0.11.20", features = ["json"] }
+sea-orm = { version = "0.12.2", features = [
+    "sqlx-mysql",
+    "macros",
+    "runtime-tokio-native-tls",
+] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
@@ -21,3 +26,6 @@ branch = "serenity-next"
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity"
 branch = "next"
+
+[workspace]
+members = [".", "migration"]
