feat: base of command `/quiz buttons play`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = "0.3.17"
+raelib = { path = "./crates/raelib" }
 
 [dependencies.poise]
 git = "https://github.com/serenity-rs/poise"
