--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenvy = "0.15.7"
 rand = "0.8.5"
 reqwest = { version = "0.11.20", features = ["json"] }
 sea-orm = { version = "0.12.2", features = [
@@ -20,6 +19,9 @@ tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = "0.3.17"
 raelib = { path = "./crates/raelib" }
+shuttle-poise = "0.28.0"
+shuttle-secrets = "0.28.0"
+shuttle-runtime = "0.28.0"
 
 [dependencies.poise]
 git = "https://github.com/serenity-rs/poise"
