feat(piston): :construction: add base of the crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ git = "https://github.com/serenity-rs/serenity"
 branch = "next"
 
 [workspace]
-members = [".", "migration", "crates/raelib"]
+members = [".", "migration", "crates/raelib", "crates/piston"]
 
 [profile.dev]
 opt-level = 1
